--- a/src/App.css
+++ b/src/App.css
@@ -154,10 +154,11 @@ span.navbar-text {
 .social-icon a:hover img {
 	filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
 }
-.navbar-text button {
+/* .navbar-text button {
   font-weight: 700;
   color: #fff;
   border: 1px solid #fff;
+  border-radius: 10%;
   padding: 18px 34px;
   font-size: 18px;
   margin-left: 18px;
@@ -178,10 +179,11 @@ span.navbar-text {
   top: 0;
   z-index: -1;
   transition: 0.3s ease-in-out;
+  border-radius: 10%;
 }
 .navbar-text button:hover {
   color: #121212;
-}
+} */
 .navbar-text button:hover::before {
 	content: "";
 	width: 100%;
@@ -313,28 +315,27 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   line-height: 1.5em;
   width: 96%;
 }
+
 .banner button {
-  color: #fff;
   font-weight: 700;
-  font-size: 20px;
-  margin-top: 60px;
-  letter-spacing: 0.8px;
-  display: flex;
-  align-items: center;
+  color: white;
+  border: 1px solid #fff;
+  padding: 18px 34px;
+  font-size: 18px;
+  margin-left: 18px;
+	position: relative;
+	background-color: transparent;
+	transition: 0.3s ease-in-out;
 }
-.banner button svg {
-  font-size: 25px;
-  margin-left: 10px;
-  transition: 0.3s ease-in-out;
-  line-height: 1;
+.banner button span {
+  z-index: 1;
 }
-.banner button:hover svg {
-  margin-left: 25px;
+
+.banner button:hover {
+  color: #121212;
+  background-color: white;
 }
-.banner img {
-  animation: updown 3s linear infinite;
-  
-}
+
 @keyframes updown {
     0% {
         transform: translateY(-20px);
@@ -467,41 +468,33 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
   border-radius: 30px;
   overflow: hidden;
-  margin-bottom: 24px;
+  margin-bottom: 60px;
+  margin-top: 65px;
+  
 }
-.proj-imgbx::before {
-  content: "";
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  opacity: 0.85;
-  position: absolute;
-  width: 100%;
-  height: 0;
-  transition: 0.4s ease-in-out;
-}
-.proj-imgbx:hover::before {
-  height: 100%;
-}
+
 .proj-txtx {
   position: absolute;
   text-align: center;
+  justify-content: center;
   top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
   transition: 0.5s ease-in-out;
   opacity: 0;
   width: 100%;
+
 }
-.proj-imgbx:hover .proj-txtx {
-  top: 50%;
-  opacity: 1;
-}
+
 .proj-txtx h4 {
+  color: #000;
   font-size: 30px;
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1.1em;
 }
 .proj-txtx span {
+  
   font-style: italic;
   font-weight: 400;
   font-size: 15px;
@@ -524,75 +517,44 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
   padding: 60px 0 50px 0;
 }
-.contact img {
+/* .contact img {
   width: 92%;
-}
+} */
 .contact h2 {
-	font-size: 45px;
+	font-size: 80px;
 	font-weight: 700;
-  margin-bottom: 30px;
+  margin-bottom: 45px;
 }
-.contact form input, .contact form textarea {
-  width: 100%;
-  background: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
-  color: #fff;
-  margin: 0 0 8px 0;
-  padding: 18px 26px;
-  font-weight: 500;
-  font-size: 18px;
-  letter-spacing: 0.8px;
-  transition: 0.3s ease-in-out;
+.contact p {
+	font-size: 20px;
+	font-weight: 700;
+  margin-bottom: 45px;
 }
-.contact form input:focus, .contact form textarea:focus {
-  background: rgba(255, 255, 255, 1);
-  color: #121212;
-}
-.contact form input::placeholder, .contact form textarea::placeholder {
-  font-size: 16px;
-  font-weight: 400;
-  color: #fff;
-}
-.contact form input:focus::placeholder, .contact form textarea:focus::placeholder {
-  color: #121212;
-  opacity: 0.8;
-}
-.contact form button {
+.contact button {
   font-weight: 700;
-  color: #000;
-  background-color: #fff;
-  padding: 14px 48px;
+  color: white;
+  border: 1px solid #fff;
+  padding: 18px 34px;
   font-size: 18px;
-  margin-top: 25px;
-  border-radius: 0;
-  position: relative;
-  transition: 0.3s ease-in-out;
+  margin-left: 18px;
+	position: relative;
+	background-color: transparent;
+	transition: 0.3s ease-in-out;
 }
-.contact form button span {
+.contact button span {
   z-index: 1;
-  position: relative;
-}
-.contact form button:hover {
-  color: #fff;
-}
-.contact form button::before {
-  content: "";
-  background: #121212;
-  width: 0;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  transition: 0.3s ease-in-out;
-}
-.contact form button:hover::before {
-  width: 100%;
 }
 
+.contact button:hover {
+  color: #121212;
+  background-color: white;
+}
+
+
+
+
 .footer {
-  padding: 0 0 15px 0;
+  padding: 0 0 0 0;
   background-image: url('./assets/img/footer-bg.png');
   background-position: center center;
   background-size: cover;
