--- a/src/App.css
+++ b/src/App.css
@@ -154,36 +154,7 @@ span.navbar-text {
 .social-icon a:hover img {
 	filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
 }
-/* .navbar-text button {
-  font-weight: 700;
-  color: #fff;
-  border: 1px solid #fff;
-  border-radius: 10%;
-  padding: 18px 34px;
-  font-size: 18px;
-  margin-left: 18px;
-	position: relative;
-	background-color: transparent;
-	transition: 0.3s ease-in-out;
-}
-.navbar-text button span {
-  z-index: 1;
-}
-.navbar-text button::before {
-  content: "";
-  width: 0%;
-  height: 100%;
-  position: absolute;
-  background-color: #fff;
-  left: 0;
-  top: 0;
-  z-index: -1;
-  transition: 0.3s ease-in-out;
-  border-radius: 10%;
-}
-.navbar-text button:hover {
-  color: #121212;
-} */
+
 .navbar-text button:hover::before {
 	content: "";
 	width: 100%;
@@ -289,6 +260,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .banner .wrap{
   color:rgba(177, 51, 127, 0.911)  ;
+}
+.banner img {
+  animation: updown 3s linear infinite;
 }
 .banner .tagline {
   font-weight: 700;
@@ -549,9 +523,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   color: #121212;
   background-color: white;
 }
-
-
-
 
 .footer {
   padding: 0 0 0 0;
